# gst-opencv

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
cmake/modules/: FindGlib2.cmake  FindGstreamer.cmake  FindLibIconv.cmake  FindLibXml2.cmake  FindOpenCV.cmake
src/: CMakeLists.txt  Makefile.am  config.h  gstopencv.c  gstopencvbasetrans.c  gstopencvbasetrans.h  gstopencvutils.c  gstopencvutils.h
src/basicfilters/: CMakeLists.txt  Makefile.am  gstcvabsdiffs.c  gstcvabsdiffs.h  gstcvadds.c  gstcvadds.h  gstcvands.c  gstcvands.h  gstcvcmps.c  gstcvcmps.h  gstcvdilateerode.c  gstcvequalizehist.c  gstcvfilter2d.c  gstcvfilter2d.h  gstcvlaplace.c  gstcvresize.c  gstcvresize.h  gstcvsmooth.c  gstcvsobel.c
src/edgedetect/: CMakeLists.txt
src/faceblur/: CMakeLists.txt
src/facedetect/: CMakeLists.txt
src/pyramidsegment/: CMakeLists.txt
src/templatematch/: CMakeLists.txt  gsttemplatematch.c
src/textwrite/: CMakeLists.txt
